--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <script type="text/javascript" src="number.js"></script>
     <h1>Number Guessing Game</h1>
     <h3>by: Colt</h3>
+    <p>What!? is your favorite color?</p>
   </body>
 </html>
