Created the framework for the questions

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>Udemy Exercise</title>
   </head>
   <body>
-    <script type="text/javascript" src="number.js"></script>
-    <h1>Number Guessing Game</h1>
-    <h3>by: Colt</h3>
-    <p>What!? is your favorite color?</p>
+    <script type="text/javascript" src="question.js"></script>
+    <h1>Crossing the Bridge</h1>
   </body>
 </html>
